web-application/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-app
  labels:
    istio-injection: enabled
