web-application/manifests/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: web-app-gateway
  namespace: web-app
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
